<resources>
    <string name="app_name">CalculatorApp</string>
    <string name="display">Enter in a value</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>

    <string name="clear">C</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="parClose">)</string>
    <string name="point">.</string>
    <string name="equals">=</string>
    <string name="backspace">⌫</string>
    <string name="parOpen">(</string>

    <string name="trigSinText">sin</string>
    <string name="trigCosText">cos</string>
    <string name="trigTanText">tan</string>
    <string name="trigArcSinText">arcsin</string>
    <string name="trigArcCosText">arccos</string>
    <string name="trigArcTanText">arctan</string>
    <string name="naturalLogText">ln</string>
    <string name="LogText">lg</string>
    <string name="squareRootText">√x</string>
    <string name="absoluteValueText">|x|</string>
    <string name="piText">π</string>
    <string name="eText">e</string>
    <string name="xSquaredText">x<sup><small>2</small></sup></string>
    <string name="xPowerYText">x<sup><small>y</small></sup></string>
    <string name="radXText">rad</string>
</resources>